changed the data path

--- a/AI_For_Diabetic_Retinopathy_Stages_Blindness_Detection.ipynb
+++ b/AI_For_Diabetic_Retinopathy_Stages_Blindness_Detection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AI to classify stages of Diabetic Retinopathy for Blindness Detection\n",
+    "## AI to Classify stages of Diabetic Retinopathy for Blindness Detection\n",
     "Diabetic retinopathy is the most common form of diabetic eye disease. Diabetic retinopathy usually only affects people who have had diabetes (diagnosed or undiagnosed) for a significant number of years.\n",
     "Retinopathy can affect all diabetics and becomes particularly dangerous, increasing the risk of blindness, if it is left untreated.\n",
     "The risk of developing diabetic retinopathy is known to increase with age as well with less well controlled blood sugar and blood pressure level.\n",
@@ -15,23 +15,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kenneth\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
    "source": [
     "import os\n",
     "import numpy as np \n",
@@ -80,7 +68,7 @@
    "source": [
     "WORKERS = 2\n",
     "CHANNEL = 3\n",
-    "data_path = \"D:/kenneth/schoolAI/4/Diabetic_Retinopathy_detection/data/\"\n",
+    "data_path = \"data/\"\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "SIZE = 224\n",
